correct alignment

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -17,6 +17,16 @@
  body{
   background:#eee;
 }
+
+a {
+  text-decoration: none;
+  color: white;
+}
+
+a:hover {
+  color:white;
+}
+
 .chat-list {
   padding: 0;
   font-size: .8rem;
